--- a/requirements.txt
+++ b/requirements.txt
@@ -6,12 +6,22 @@
 #
 addict==2.4.0
     # via -r requirements.in
+ago==0.0.95
+    # via -r requirements.in
 aiofiles==22.1.0
     # via -r requirements.in
 aiohttp==3.8.3
+    # via
+    #   -r requirements.in
+    #   aiohttp-devtools
+aiohttp-devtools==1.0.post0
     # via -r requirements.in
 aiosignal==1.3.1
     # via aiohttp
+anyio==3.6.2
+    # via watchgod
+asttokens==2.1.0
+    # via devtools
 async-timeout==4.0.2
     # via aiohttp
 asyncpg==0.27.0
@@ -21,16 +31,32 @@ attrs==22.1.0
 charset-normalizer==2.1.1
     # via aiohttp
 click==8.1.3
-    # via -r requirements.in
+    # via
+    #   -r requirements.in
+    #   aiohttp-devtools
+devtools==0.9.0
+    # via aiohttp-devtools
+executing==0.10.0
+    # via devtools
 frozenlist==1.3.3
     # via
     #   aiohttp
     #   aiosignal
 idna==3.4
-    # via yarl
+    # via
+    #   anyio
+    #   yarl
 multidict==6.0.2
     # via
     #   aiohttp
     #   yarl
+pygments==2.13.0
+    # via aiohttp-devtools
+six==1.16.0
+    # via asttokens
+sniffio==1.3.0
+    # via anyio
+watchgod==0.8.2
+    # via aiohttp-devtools
 yarl==1.8.1
     # via aiohttp
