Rename allowed ids

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,7 +9,7 @@ services:
     environment:
       - TMA_PATH=/findmy
       - TMA_DATABASE_DSN=postgresql://postgres:postgres@postgres:5432/findmy
-      - TMA_WHITELIST=${TMA_WHITELIST}
+      - TMA_ALLOWED_IDS=${TMA_ALLOWED_IDS}
 
   postgres:
     image: postgres:15-alpine
